Related to issue 20207: SmartClient selector used in classic windows now does not show weird horizontal scroll-bar

--- a/modules/org.openbravo.userinterface.skin.250to300Comp/web/org.openbravo.userinterface.smartclient/openbravo/skins/250to300Comp/org.openbravo.userinterface.selector/ob-selector-widget-styles.css
+++ b/modules/org.openbravo.userinterface.skin.250to300Comp/web/org.openbravo.userinterface.smartclient/openbravo/skins/250to300Comp/org.openbravo.userinterface.selector/ob-selector-widget-styles.css
@@ -320,3 +320,14 @@
   background-color: #E8E8E8;
 }
 
+
+/* Fix for IE9 + HTML5 to avoid weird horizontal scroll */
+.pickListMenuBody {
+  background-color: white;
+  background-repeat: repeat-x ;
+  background-position: bottom left;
+  background-image: url(./images/selector-widget/pickers/border.png);
+  border-width: 0px 1px 0px 1px;
+  border-style: solid;
+  border-color: #8fa7c7;
+}
